2015-08-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add text_columns support for charts and add new bubble chart
	"'High' results per host of last report" for Tasks.

	* src/gsad_omp.c (get_aggregate_omp): Handle text_columns parameters.

	* src/gsad.c (init_validator, params_append_mhd, params_mhd_add): Add
	text_columns hashtable parameter.

	* src/html/classic/graphics.xsl (js-aggregate-data-source): Add new
	parameter text_columns.
	(js-scan-management-top-visualization): Add new bubble chart
	"'High' results per host of last report" for Tasks.

	* src/html/classic/js/gsa_graphics_base.js (extract_simple_records)
	(extract_column_info): Extract text columns.

2015-08-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (asset [os-details]): Add "Hosts using this
	Operating System".

2015-08-12  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (save_my_settings_omp): Add new "Default Severity"
	setting.

	* src/gsad.c (init_validator): Add default_severity.

	* src/html/classic/omp.xsl (get_my_settings, edit_my_settings): Add new
	"Default Severity" setting.

2015-08-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (get_asset): Combine two versions of same
	template.

2015-08-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_base.h (credentials_t): Add client_address element.

	* src/gsad.c (get_client_address): New function.
	(request_handler): Add client address to envelope, adjust
	functions calls.
	(credentials_new, credentials_free, exec_omp_post): Adjust for
	client_address.

	* src/gsad_omp.c (xsl_transform_omp): Add client address to envelope.

	* src/html/classic/gsad.xsl (client_address): New template.

2015-08-11  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add new parameters to charts for customizing the fields shown, the
	chart title and the field labels.

	* src/gsad.c (init_validator): Add hashtable params chart_gen,